Posts -> PostWithTags, RecentPosts, PopularPosts Cleaning warningss in layout resources.

--- a/app/src/main/res/layout-v21/content_fab.xml
+++ b/app/src/main/res/layout-v21/content_fab.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -41,6 +40,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/bg_corner_accent"
+        android:elevation="8dp"
         android:foreground="?attr/selectableItemBackground"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
@@ -55,6 +55,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/bg_corner_accent"
+        android:elevation="8dp"
         android:foreground="?attr/selectableItemBackground"
         app:layout_constraintBottom_toTopOf="@+id/bgBtnRegular"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
@@ -69,6 +70,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@null"
+        android:elevation="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/bgBtnPro"
         app:layout_constraintStart_toStartOf="@+id/bgBtnPro"
         app:layout_constraintTop_toTopOf="@+id/bgBtnPro"
@@ -82,6 +84,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:elevation="8dp"
         android:maxLines="1"
         android:text="@string/global_btn_pro_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
@@ -99,6 +102,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:elevation="8dp"
         android:maxLines="1"
         android:text="@string/global_btn_pro_desc"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -117,6 +121,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@null"
+        android:elevation="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/bgBtnRegular"
         app:layout_constraintStart_toStartOf="@+id/bgBtnRegular"
         app:layout_constraintTop_toTopOf="@+id/bgBtnRegular" />
@@ -128,6 +133,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:elevation="8dp"
         android:maxLines="1"
         android:text="@string/global_btn_regular_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
@@ -145,6 +151,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:elevation="8dp"
         android:maxLines="1"
         android:text="@string/global_btn_regular_desc"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
