--- a/app/src/main/res/layout-v21/content_chat.xml
+++ b/app/src/main/res/layout-v21/content_chat.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/bg_corner_white"
+        android:elevation="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +29,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:elevation="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/editText"
         app:layout_constraintStart_toStartOf="@+id/bgBottom"
         app:layout_constraintTop_toTopOf="@+id/editText"
@@ -41,6 +43,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:elevation="4dp"
         android:ems="10"
         android:hint="@string/activity_chat_hint_message"
         android:inputType="textMultiLine|textCapSentences"
@@ -62,6 +65,7 @@
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:contentDescription="@null"
+        android:elevation="4dp"
         android:foreground="?attr/selectableItemBackground"
         android:tint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/editText"
