--- a/app/src/main/res/layout-v21/item_new_post.xml
+++ b/app/src/main/res/layout-v21/item_new_post.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:elevation="8dp"
     android:visibility="gone">
 
     <ImageView
@@ -14,7 +15,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:contentDescription="@null"
-        android:visibility="invisible"
+        android:elevation="16dp"
         app:layout_constraintBottom_toTopOf="@+id/includeContent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
 
     <include
         android:id="@+id/includeContent"
+        android:visibility="visible"
         layout="@layout/content_card_new_post"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -30,7 +32,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
