--- a/app/src/main/res/layout-v23/fragment_appinfo.xml
+++ b/app/src/main/res/layout-v23/fragment_appinfo.xml
@@ -104,6 +104,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
             android:drawableStart="@drawable/ic_info_teal_24dp"
+            android:drawableTint="@color/colorPrimary"
             android:text="@string/appinfo_item_copyright"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
