--- a/app/src/main/res/layout/content_card_new_post.xml
+++ b/app/src/main/res/layout/content_card_new_post.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -58,10 +57,10 @@
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/edtContent"
                     android:layout_width="match_parent"
-                    android:minHeight="128dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/posts_text_contenthint"
-                    android:inputType="textMultiLine" />
+                    android:inputType="textMultiLine"
+                    android:minHeight="128dp" />
             </android.support.design.widget.TextInputLayout>
 
             <me.originqiu.library.EditTag
