--- a/app/src/main/res/layout/content_message.xml
+++ b/app/src/main/res/layout/content_message.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Some cool message here!"
+        android:text="@string/global_message_hint"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
