--- a/app/src/main/res/layout/post_item_post.xml
+++ b/app/src/main/res/layout/post_item_post.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -41,7 +42,8 @@
             android:textColor="@color/md_blue_grey_500"
             app:layout_constraintEnd_toStartOf="@+id/imgMoreHorizontal"
             app:layout_constraintStart_toEndOf="@+id/imgProfile"
-            app:layout_constraintTop_toTopOf="@+id/imgProfile" />
+            app:layout_constraintTop_toTopOf="@+id/imgProfile"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/txtTime"
@@ -53,7 +55,8 @@
             android:text="25min"
             app:layout_constraintEnd_toStartOf="@+id/imgMoreHorizontal"
             app:layout_constraintStart_toEndOf="@+id/imgProfile"
-            app:layout_constraintTop_toBottomOf="@+id/txtName" />
+            app:layout_constraintTop_toBottomOf="@+id/txtName"
+            tools:ignore="HardcodedText" />
 
         <me.gujun.android.taggroup.TagGroup
             android:id="@+id/tagGroup"
@@ -82,7 +85,9 @@
             android:textIsSelectable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tagGroup" />
+            app:layout_constraintTop_toBottomOf="@+id/tagGroup"
+            android:focusable="true"
+            tools:ignore="HardcodedText" />
 
         <TextView
             android:id="@+id/txtLikesCount"
@@ -93,7 +98,7 @@
             android:layout_marginTop="8dp"
             android:drawablePadding="8dp"
             android:drawableStart="@drawable/ic_favorite_primarydark_24dp"
-            android:text="1,345"
+            android:text=""
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +113,7 @@
             android:layout_marginTop="8dp"
             android:drawablePadding="8dp"
             android:drawableStart="@drawable/ic_chat_bubble_grey_24dp"
-            android:text="82"
+            android:text=""
             android:textColor="@color/md_grey_300"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txtLikesCount"
@@ -131,7 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="Chatear"
+            android:text=""
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
