--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -31,7 +31,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/editText"
         app:layout_constraintStart_toStartOf="@+id/bgBottom"
         app:layout_constraintTop_toTopOf="@+id/editText"
-        app:srcCompat="@drawable/ic_sign"
+        android:tint="@color/colorAccent"
+        app:srcCompat="@drawable/ic_add_black_24dp"
         android:contentDescription="@null" />
 
     <EditText
@@ -83,4 +84,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/chat_item_emisor_message" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:visibility="gone"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
