--- a/app/src/main/res/layout-v21/content_chat.xml
+++ b/app/src/main/res/layout-v21/content_chat.xml
@@ -29,12 +29,13 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@null"
         android:elevation="4dp"
+        android:tint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/editText"
         app:layout_constraintStart_toStartOf="@+id/bgBottom"
         app:layout_constraintTop_toTopOf="@+id/editText"
-        app:srcCompat="@drawable/ic_sign"
-        android:contentDescription="@null" />
+        app:srcCompat="@drawable/ic_add_black_24dp" />
 
     <EditText
         android:id="@+id/editText"
@@ -66,13 +67,13 @@
         android:clickable="true"
         android:contentDescription="@null"
         android:elevation="4dp"
+        android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
         android:tint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="@+id/bgBottom"
         app:layout_constraintTop_toTopOf="@+id/editText"
-        app:srcCompat="@android:drawable/ic_menu_send"
-        android:focusable="true" />
+        app:srcCompat="@android:drawable/ic_menu_send" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
@@ -87,4 +88,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/chat_item_emisor_message" />
+
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
