--- a/app/src/main/res/layout/avatarslide_item_avatar.xml
+++ b/app/src/main/res/layout/avatarslide_item_avatar.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/avatarDrawable"
-        android:layout_width="172dp"
-        android:layout_height="172dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -16,6 +16,7 @@
         app:layout_constraintBottom_toTopOf="@+id/txtName"
         app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_tinder" />
